Classes/.clang-completion-error
In file included from /Users/xuyecheng/Documents/ios/iPlan/Classes/ModelLogic.m:9:
/Users/xuyecheng/Documents/ios/iPlan/Classes/ModelLogic.h:62:102: error: expected ';' after method prototype
- (void) generateDefaultTimetableFromModules:(NSArray*)modulesSelected Active:(NSArray*)activeIndexes
                                                                                                     ^
                                                                                                     ;
/Users/xuyecheng/Documents/ios/iPlan/Classes/ModelLogic.m:14:1: error: illegal interface qualifier
@synthesize moduleObjectsDict;
^
/Users/xuyecheng/Documents/ios/iPlan/Classes/ModelLogic.m:16:41: error: expected ';' after method prototype
-(id)initWithTimeTable:(TimeTable*)table
                                        ^
                                        ;
3 errors generated.
